--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /OlaMundoSwing/dist/
 /TiposPrimitivos/target/
 /SomaSwing/target/
+/OperadoresAritmeticos/nbproject/private/
+/OperadoresAritmeticos/build/
+/OperadoresSwing/nbproject/private/
+/OperadoresSwing/build/
