--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /OperadoresAritmeticos/build/
 /OperadoresSwing/nbproject/private/
 /OperadoresSwing/build/
+/OperadorTernario/target/
+/ComparacaoString/target/
+/OperadoresLogicos/target/
+/VerificadorIdadeSwing/target/
