Aula 9 - Estrutura de controle

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 /ComparacaoString/target/
 /OperadoresLogicos/target/
 /VerificadorIdadeSwing/target/
+/ProgramaMedia/nbproject/private/
+/ProgramaMedia/build/
+/ProgramaIdade/nbproject/private/
+/ProgramaIdade/build/
+/ProgramaParImparSwing/nbproject/private/
+/ProgramaParImparSwing/build/
