Exercício aula 9 - interface gráfico raiz quadrada

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /ProgramaIdade/build/
 /ProgramaParImparSwing/nbproject/private/
 /ProgramaParImparSwing/build/
+/EquacaoSegundoGrau/nbproject/private/
+/EquacaoSegundoGrau/build/
