Aula 10 (Estrutura condicional - parte 2) e Aula 11 (Estrutura de repetição - parte 1)

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@
 /ProgramaParImparSwing/build/
 /EquacaoSegundoGrau/nbproject/private/
 /EquacaoSegundoGrau/build/
+/VotacaoSwing/nbproject/private/
+/VotacaoSwing/build/
+/ProgramaPernas/nbproject/private/
+/ProgramaPernas/build/
+/Contador01/nbproject/private/
+/Contador01/build/
+/Contador02/nbproject/private/
+/Contador02/build/
