--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@
 /Repeticao01/build/
 /Numeros/nbproject/private/
 /Numeros/build/
+/RepeticaoFor/nbproject/private/
+/RepeticaoFor/build/
+/Vetor01/nbproject/private/
+/Vetor01/build/
+/Vetor02/nbproject/private/
+/Vetor02/build/
+/Vetor03/nbproject/private/
+/Vetor03/build/
+/Vetor04/nbproject/private/
+/Vetor04/build/
+/Vetor05/nbproject/private/
+/Vetor05/build/
